# PowerGrid

./: .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  VagrantKey.pem  Vagrantfile
PowerGrid/: .gitignore  DWICGMC.hpp  DWICGMCDFT.hpp  FieldCorrection.hpp  Gdft.hpp  Gfft.cpp  Gfft.h  Gfft.hpp  Ggrid.hpp  PowerGrid.h  PowerGridDWI3D.cpp  PowerGridDWI3DDFT.cpp  PowerGridGdft.cpp  PowerGridGgrid.cpp  PowerGridIsmrmrd.cpp  QuadPenalty.hpp  Robject.hpp  SENSE.hpp  TVPenalty.hpp  config.cxx  config.hxx  config.xsd  fftCPU.hpp  fftGPU.hpp  fftshift.hpp  ftCpu.hpp  gridding.hpp  griddingSupport.hpp  impatientTypes.h  main.cpp  mpiDWICGMCDFT.hpp  mpiPowerGridDWI3DDFT.cpp  processIsmrmrd.cpp  processIsmrmrd.h  processIsmrmrd.hpp  pwls_pcg1.hpp  reconSolve.hpp  reconfMRIGdft.hpp  reconfMRIGgrid.hpp  simpleTutorial.cpp  (+18 more)
PowerGrid.xcodeproj/: project.pbxproj
PowerGrid.xcodeproj/project.xcworkspace/xcshareddata/: PowerGrid.xccheckout
PowerGrid.xcodeproj/xcuserdata/alexcerjanic.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
PowerGrid.xcodeproj/xcuserdata/alexcerjanic.xcuserdatad/xcschemes/: PowerGrid.xcscheme  xcschememanagement.plist
PowerGrid/Tutorials/: simpleTutorial.cpp
Resources/: FM.mat  SMap.mat  data_gdtf.mat  data_onecoil.mat  data_onecoil_FM.mat  data_sense.mat  data_sense_FM.mat  data_sense_FM_R2.mat  data_sense_R2.mat  generate_data.m  gsp19e.c  imagePhantom.mat  ix.mat  iy.mat  kx_epi.mat  kx_sp.mat  kx_sp_R2.mat  ky_epi.mat  ky_sp.mat  ky_sp_R2.mat  out.mat  sen.mat  test.mat  testAdjointImag.mat  testAdjointReal.mat  testAdjointTest.mat  testForwardImag.mat  testForwardReal.mat  testForwardTest.mat  testGdft.mat  testGdftAdjoint.mat  testGdftForward.mat  test_FieldCorrection.mat
Resources/IMPATIENT/: bruteForceCpu.cpp  dotProductCpu.cpp  gridding.cp
Support/: CeempleArmadillo.h  CeempleComplex.h  CeempleMatio.h  Ceemple_BSD_license.txt
Support/Boost/: ArmaSerialization.hpp
cmake/Modules/: FindACML.cmake  FindArmadillo.bakcmake  FindArmadillo.cmake  FindFFTW.cmake  FindFFTW.cmake~  FindMATIO.cmake  FindMatio.cmake~  FindXerces.cmake
